🏟🖐 Checkpoint actions/test/index.js:306548/189 package.json:306548/11 server.js:306548/429 actions/index.js:306548/47 README.md:306548/522 public/client.js:306548/1

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.3",
     "dialogflow": "^4.0.3",
-    "monk": "^6.0.5"
+    "monk": "^6.0.5",
+    "body-parser": "^1.18.2"
   },
   "engines": {
     "node": "8.x"
