--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "This project",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node createExampleDB.js"
   },
   "dependencies": {
     "express": "^4.16.2",
