Exporting to isaacNegatu/chatBot

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "node": "8.x"
   },
   "repository": {
-    "url": "https://github.com/EliKrumholz/mnstate-bot"
+    "url": "https://github.com/isaacNegatu/chatBot"
   },
   "license": "MIT",
   "keywords": [
